flux/apps/runner-system/runner-control/runner-control-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner-control
  labels:
    app: runner-control
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runner-control
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: runner-control
      labels:
        app: runner-control
    spec:
      serviceAccountName: runner-control
      containers:
      - name: runner-control
        image: runner-control:pr-28-4754921
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
          name: metrics
        - containerPort: 8080
          name: internal-api
        - containerPort: 50051
          name: external-api
