flux/apps/runner-system/runner-control/runner-control-external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: runner-control-external
  labels:
    app: runner-control
    mirror.linkerd.io/exported: "true"
spec:
  selector:
    app: runner-control
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 50051
    name: external-api
  type: ClusterIP
