flux/apps/runner-system/runner-control/runner-control-internal-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  # TODO: Remove and use runner-control-internal instead
  name: taskset-api-internal
  labels:
    app: runner-control
spec:
  selector:
    app: runner-control
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: internal-api
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: runner-control-internal
  labels:
    app: runner-control
    mirror.linkerd.io/exported: "true"
spec:
  selector:
    app: runner-control
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: internal-api
  type: ClusterIP
