flux/apps/runner-system/runner-control/runner-control-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ## External DNS And TLS Annotations
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/hostname: runner.${subdomain}.${domain}.
    kubernetes.io/tls-acme: "true"
    ## Client Certificate Authentication Annotations
    # Request client certificate if available, but don't deny access if not provided
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional"
    # Specify the secret that contains the CA certificate
    nginx.ingress.kubernetes.io/auth-tls-secret: "cert-manager/runner-ca-secret"
    # Pass the client certificate to the backend if present
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
  name: runner-control
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: runner.${subdomain}.${domain}
    http:
      paths:
      - backend:
          service:
            name: runner-control-external
            port:
              number: 8081
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - runner.${subdomain}.${domain}
    secretName: runner-control-tls
